[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Andy <peacess@163.com>"]
description = "Generate Db code"
repository = "https://github.com/peacess/db_code"
homepage = "https://github.com/peacess/db_code"
keywords = ["rust", "db","generate","sql","code"]
license = "Apache-2.0"

[workspace]
resolver = "2"
members=[
    "db_macro","code","sample"
]

[workspace.dependencies]
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_info"] }
chrono = "0.4.40"
rust_kits = { version = "0.1.6"}
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls" , "sqlite" ] }
xid = "1.1.1"
tokio = { version = "1.44.1", features = ["full"] }
prettyplease = "0.2.31"

#[lib]
#name="db_code"
#path="./lib.rs"

[profile.release]
opt-level = 3
strip = false
overflow-checks = true
codegen-units = 1
lto = false
