[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Andy <peacess@163.com>"]
description = "Generate Db code"
repository = "https://github.com/peacess/db_code"
homepage = "https://github.com/peacess/db_code"
keywords = ["rust", "db","generate","sql","code"]
license = "Apache-2.0"

[workspace]
resolver = "2"
members=[
    "db_macro","code","samples", "db_macro_lib"
]

[workspace.dependencies]
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_info"] }
chrono = "0.4.42"
rust_kits = { version = "0.1.6"}
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls" , "sqlite" ] }
xid = "1.1.1"
tokio = { version = "1.49.0", features = ["full"] }
prettyplease = "0.2.37"
convert_case = "0.10.0"

syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.43"
proc-macro2 = "1.0.105"
proc_macro_roids = "0.8.0"

#[lib]
#name="db_code"
#path="./lib.rs"

[profile.release]
opt-level = 3
strip = false
overflow-checks = true
codegen-units = 1
lto = false
