[package]
name = "db_code"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
sqlx.workspace = true
xid = {workspace = true}
rust_kits.workspace = true

db_code_macro = {version = "0.1.2", git = "https://github.com/peacess/rust.git"}

[lib]
name="db_code"
path="./lib.rs"
