[package]
name = "db_code"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
sqlx.workspace = true
xid = {workspace = true}
rust_kits.workspace = true


[lib]
name="db_code"
path="./lib.rs"


