[package]
name = "db_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"] }

syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.76"
proc_macro_roids = "0.8.0"

[lib]
proc-macro = true
path="./lib.rs"

[features]
default = ["sql", "dao"]
sql = []
dao = []
