[package]
name = "db_code_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true

syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.81"
proc_macro_roids = "0.8.0"

[lib]
proc-macro = true
path = "./lib.rs"

[features]
default = ["sql", "dao"]
sql = []
dao = []
