[package]
name = "db_code_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn.workspace =true
quote.workspace = true

db_code_macro_lib = { path = "../db_macro_lib" }

[lib]
proc-macro = true
path = "./lib.rs"

[features]
default = ["sql", "dao"]
sql = ["db_code_macro_lib/sql"]
dao = ["db_code_macro_lib/dao"]
