[package]
name = "db_code_macro_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
proc_macro_roids.workspace = true
prettyplease.workspace = true

[features]
default = ["sql", "dao"]
sql = []
dao = []