[package]
name = "db_code_sample"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#db_code = {path = "../code", default-features = false,features = ["dao"] }
db_code = { path = "../code", default-features = false,features = ["dao"]}

sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }