[package]
name = "db_code_sample"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

db_code = { path = "../code"}
db_code_macro = {path = "../db_macro", default-features = true}

sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }